testcases/compiler2015/Phase2/CompileError/member-5100379071-puyouer.c
/*
 * array doesn't have such member
 */
int main() {
    int a[10];
    int x;
    x = a.eee;
    return 0;
}
